add BOSH Design Principles concept doc

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -15,10 +15,11 @@ freeing operators from concerns about differences between environments.
 
 ## <a id="foundations"></a> BOSH Foundations ##
 
-* [BOSH Terminology](terminology.html)
-* [Understanding BOSH]](understanding-bosh.html)
-* [BOSH Components](bosh-components.html)
-* [Basic BOSH Workflow](workflow.html)
+* [BOSH Terminology](./terminology.html)
+* [Understanding BOSH]](./understanding-bosh.html)
+* [BOSH Components](./bosh-components.html)
+* [Basic BOSH Workflow](./workflow.html)
+* [BOSH Design Principles](./design.html)
 
 ## <a id="working"></a> Working with BOSH ##
 
@@ -26,15 +27,13 @@ The [BOSH Command Line Interface (CLI)](bosh-cli.html) is the primary operator
 interface to BOSH.
 Run `bosh help --all` to see all available BOSH commands.
 
-* [Setting Up your IaaS for BOSH](iaas-setup.html)
-* [Deploying MicroBOSH](deploy-microbosh.html)
-* [Deploying Distributed Software with BOSH](deploy-with-bosh.html)
+* [Setting Up your IaaS for BOSH](./iaas-setup.html)
+* [Deploying MicroBOSH](./deploy-microbosh.html)
+* [Deploying Distributed Software with BOSH](./deploy-with-bosh.html)
 
 ## <a id="deep"></a> BOSH in Depth ##
 
-Knowledge and skills for developers and other experts.
-
-* [Creating a BOSH Release](create-release.html)
-* [Creating a MicroBOSH Deployment Manifest](create-micro-manifest.html)
+* [Creating a BOSH Release](./create-release.html)
+* [Creating a MicroBOSH Deployment Manifest](./create-micro-manifest.html)
 * [Understanding the BOSH Deployment Manifest](./deployment-manifest.html)
 * [Sample BOSH Deployment Manifest](./sample-manifest.html)
