--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -16,7 +16,7 @@ freeing operators from concerns about differences between environments.
 ## <a id="foundations"></a> BOSH Foundations ##
 
 * [BOSH Terminology](./terminology.html)
-* [Understanding BOSH]](./understanding-bosh.html)
+* [Understanding BOSH](./understanding-bosh.html)
 * [BOSH Components](./bosh-components.html)
 * [Basic BOSH Workflow](./workflow.html)
 * [BOSH Design Principles](./design.html)
