--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -29,6 +29,7 @@ Run `bosh help --all` to see all available BOSH commands.
 
 * [Setting Up your IaaS for BOSH](./iaas-setup.html)
 * [Deploying MicroBOSH](./deploy-microbosh.html)
+* [Deploying MicroBOSH to AWS](./deploy-microbosh-to-aws.html)
 * [Deploying Distributed Software with BOSH](./deploy-with-bosh.html)
 
 ## <a id="deep"></a> BOSH in Depth ##
