rename anchor in Deploying MicroBOSH to AWS topic

--- a/deploy-microbosh-to-aws.html.md.erb
+++ b/deploy-microbosh-to-aws.html.md.erb
@@ -132,7 +132,7 @@ Click **Yes, Allocate**.
     * **Name tag:** bosh
     * **Group Name:** bosh
     * **Description:** BOSH Security Group
-    * **VPC:** Select the ‘microbosh’ VPC created in [Create a Virtual Private Cloud)](#vpc).
+    * **VPC:** Select the ‘microbosh’ VPC created in [Create a Virtual Private Cloud)](#create-vpc).
 
         <%= image_tag("images/micro-aws/create-security.png") %>
 
