--- a/deployment-manifest.html.md.erb
+++ b/deployment-manifest.html.md.erb
@@ -183,7 +183,7 @@ networks:
 * **name** [String, required]: A unique name used to identify and reference this  association between a BOSH release job and a VM.
 * **templates** [Hash, optional]: Specifies the name and release of a job template.
     * **name** [String, required]: The job template name
-    * **version** [String, required]: The release where the job template exists
+    * **version** [String, required]: The release where the job template exists	* **lifecycle** [String, optional]: Specifies the kind of task. Valid values are `service` and `errand`; defaults to `service`. A `service` runs indefinitely and  restarts if it fails. An `errand` starts with a manual trigger and does not restart if it fails.
 * **persistent_disk** [Integer, optional]: Specifies the persistent disk size; defaults to 0 (no persistent disk). If `persistent_disk` is a positive integer, BOSH creates a persistent disk of that size in megabytes and attaches it to each job instance VM.
 * **properties** [Hash, optional]: Specifies job properties. Properties allow BOSH to configure jobs to a specific environment. `properties` defined in a Job block are accessible only to that job, and override any identically named global properties.
 * **resource_pool** [String, required]: A valid resource pool name from the Resource Pools block. BOSH runs instances of this job in a VM from the named resource pool.
