remove unnecessary '\' escape characters

--- a/deploy-microbosh-to-aws.html.md.erb
+++ b/deploy-microbosh-to-aws.html.md.erb
@@ -285,9 +285,9 @@ cloud_properties:
     In the following example, `micro_bosh.yml` is located in `~/workspace/my-deployment`:
 
     <pre class='terminal'>
-    $ bosh micro deployment ~/workspace/my-deployment/micro\_bosh.yml
+    $ bosh micro deployment ~/workspace/my-deployment/micro_bosh.yml
     WARNING! Your target has been changed to https://54.86.66.111:25555!
-    Deployment set to ~workspace/my-deployment/micro\_bosh.yml
+    Deployment set to ~workspace/my-deployment/micro_bosh.yml
     </pre>
 
     **Note**: The `WARNING!` message alerts you to a change in targeted Elastic IP address, and is not an error message.
