--- a/deploy-microbosh.html.md.erb
+++ b/deploy-microbosh.html.md.erb
@@ -2,117 +2,167 @@
 title: Deploying MicroBOSH
 ---
 
-MicroBOSH runs within a single VM on any cloud infrastructure that is supported for deploying software with BOSH.
+This topic presents an overview of the procedure used to deploy MicroBOSH on an
+IaaS. If you are using AWS, OpenStack, or vSphere, refer instead to these specific topics:
 
-Use MicroBOSH to deploy one of the following on an IaaS:
+* [Deploying MicroBOSH to AWS](./deploy-microbosh-to-aws.html)
+* [Deploying MicroBOSH to OpenStack](/deploying/openstack/deploying_microbosh.html)
+* [Deploying MicroBOSH to vSphere](/deploying/vsphere/deploying_micro_bosh.html)
 
-* Multi-VM BOSH for production
-* Cloud Foundry or another distributed software package
+MicroBOSH is a version of BOSH that runs on a single VM.
 
-The only supported way to deploy BOSH for production is to use MicroBOSH.
+BOSH that runs on multiple VMs, or multi-VM BOSH, deploys and manages
+large-scale distributed systems.
+The only supported way to deploy multi-VM BOSH is to use MicroBOSH.
+
+You can use MicroBOSH to deploy multi-VM BOSH, Cloud Foundry, or other
+distributed software packages on an IaaS.
 
 The IaaS you use determines many details of how you deploy MicroBOSH.
-This topic starts with a general procedure that applies for any IaaS,
-and ends with an example focused on AWS.
+This topic explains the general procedure used with any IaaS.
 
-## <a id="prep"></a> Preparing to Deploy  ##
+To deploy MicroBOSH you need to:
 
-To deploy MicroBOSH you need a stemcell, a manifest, and properly set up environments both locally and in the cloud.
-You do not need a release since MicroBOSH itself is included within the stemcell.
+1. Configure your local environment
+2. Prepare your IaaS
+3. Create a deployment manifest
+4. Download a stemcell
+5. Deploy MicroBOSH
 
-### <a id="local"></a> Set up a local work area  ###
+## <a id="configure-local"></a>Step 1: Configure Local Environment ##
 
-Set up a directory structure with two levels:
+1. Install the [BOSH Command Line Interface (CLI)](./bosh-cli.html).
 
-1. A top-level directory named after the environment you intend to deploy on the IaaS.
-1. Inside the environment directory, a directory for each product you intend to deploy.
-In this context, MicroBOSH is a product.
+1. Create a `deployments` directory.
+Inside the `deployments` directory, create `microbosh`, `manifest`, and
+`stemcell` subdirectories.
 
-* The examples that follow assume that you plan to deploy MicroBOSH to an environment named `boshtest`.
-You create a directory for each, such that the path to your MicroBOSH deployment is `boshtest/microbosh`.
+## <a id="prepare-iaas"></a>Step 2: Prepare IaaS ##
 
-<%= image_tag("bosh-directories-2-level.png") %>
+The steps needed to prepare your IaaS for MicroBOSH depend on the IaaS.
+Examples of steps you may need to take include:
 
-### <a id="cli"></a> Install the BOSH Command Line Interface  ###
+* Creating or acquiring credentials and key pairs
+* Setting up VPCs and Elastic IP addresses
+* Creating and configuring security groups
 
-[Install the BOSH CLI](./bosh-cli.html).
+For IaaS-specific instructions, see:
 
-### <a id="cloud"></a> Set up a deployment area in the cloud ###
+* [Deploying MicroBOSH to AWS](./deploy-microbosh-to-aws.html).
+* [Deploying MicroBOSH to OpenStack](/deploying/openstack/deploying_microbosh.html).
+* [Deploying MicroBOSH to vSphere](/deploying/vsphere/deploying_micro_bosh.html).
 
-Collect or decide:
+## <a id="create-manifest"></a>Step 3: Create Deployment Manifest ##
 
-1. The name of the environment you plan to deploy.
-1. Any IaaS-specific information about where your deployment should reside.
-1. The name and credentials of the user whom you want to designate as admin for your deployment.
+The MicroBOSH deployment manifest is a YAML file that defines the components and
+properties of the deployment.
 
-### <a id="stemcell"></a> Obtain a stemcell  ###
-
-[Download](http://bosh-artifacts.cfapps.io/) a stemcell that is appropriate for your preferred combination of IaaS and VM type.
-Download to the directory of your choice, and remember its path for later use.
-
-### <a id="manifest"></a> Create the MicroBOSH deployment manifest  ###
-
-The MicroBOSH deployment manifest is a YAML file named `micro-bosh.yml` that
-should reside in the directory created for MicroBOSH (`boshtest/microbosh` in
-these examples).
-
-To understand general principles of BOSH deployment manifests,
-see [BOSH Deployment Manifest](./deployment-manifest.html).
-
-For more information specific to an IaaS, see the following:
+Create the deployment manifest by modifying an existing manifest or template.
+For IaaS-specific information, see the following:
 
 * [AWS](./create-micro-manifest.html#ex-aws)
 * [OpenStack](./create-micro-manifest.html#ex-openstack)
 * [vSphere](./create-micro-manifest.html#ex-vsphere)
 
-## <a id="deploy"></a> Deploying MicroBOSH  ##
+Name the deployment manifest `micro-bosh.yml` and save it to the
+`deployments/microbosh` directory.
 
-When you are ready to deploy, be sure you know the local path to the stemcell you downloaded.
-Then `cd` into the directory you created for MicroBOSH (`boshtest/microbosh` in these examples).
+## <a id="download-stemcell"></a>Step 4: Download Stemcell ##
 
-1. Use the `bosh micro deployment` command to direct the BOSH CLI to use the correct manifest:
+BOSH stemcell names include the BOSH build number, target IaaS and hypervisor, and underlying operating system.
+For example, the name `bosh-stemcell-2427-aws-xen-ubuntu.tgz` indicates:
 
-    `bosh micro deployment micro_bosh.yml`
+* BOSH build: 2427
+* IaaS: AWS using the Xen hypervisor
+* Operating System: Ubuntu
 
-1. Deploy MicroBOSH:
+Each stemcell contains a MicroBOSH package for that stemcell.
 
-    `bosh micro deploy <local_path_to_stemcell>`
+**Note**: A "light-bosh" stemcell is a pointer to an existing machine image on
+the target IaaS.
+Light stemcells are currently only available in some AWS regions.
 
-**Note**: An important effect of the `bosh micro deploy` command is to create
-the `bosh-deployment.yml` file. This file functions like a small database that
-MicroBOSH uses when bootstrapping itself.
+Select a stemcell that matches your IaaS.
+Download the stemcell to the `deployments/stemcells` directory using one of the
+following methods:
 
-## <a id="verify"></a> Verifying your Deployment  ##
+* In a web browser, navigate to
+[http://bosh-artifacts.cfapps.io](http://bosh-artifacts.cfapps.io/), select a
+stemcell, then click **Download**.
+* In a terminal window, run `bosh public stemcells` to see a list of publicly available BOSH stemcells, select a stemcell, then run `bosh download public stemcell STEMCELL-NAME` to download the stemcell.
 
-You have two main options for verifying that your deployment was successful.
-These are to run some basic commands, and, to run the
-BOSH Acceptance Tests (BATS).
+## <a id="deploy-microbosh"></a>Step 5: Deploy MicroBOSH ##
 
-### <a id="start"></a> Basic commands for verifying MicroBOSH ###
+1. In a terminal window, from the `deployments` directory, run `bosh micro deployment manifest` to set MicroBOSH to use your manifest file.
 
-Target the MicroBOSH with the host and domain name or IP address.
-The `bosh target` command prompts you for a username and password.
+Example:
 
-For example:
-
-<pre class="terminal">
-$ bosh target alpha.microbosh-test.example.com
-Target set to `vpc-alpha-microbosh-test'
-Your username: admin
-Enter password: *****
-Logged in as `admin'
+<pre class='terminal'>
+$ bosh micro deployment manifest
+WARNING! Your target has been changed to https://54.86.66.111:25555!
+Deployment set ‘Users/my-name/deployments/micro_bosh.yml’
 </pre>
 
-**Note**: The first time you log in,
-the username and password are both `admin`.
+**Note**: The WARNING! message alerts you to a change in the targeted IP
+address, and is not an error message.
 
-**Extremely Important**: _Change the default password to a strong password immediately._
+1. Use `bosh micro deploy stemcell/NAME-OF-STEMCELL` to deploy MicroBOSH using
+the downloaded stemcell.
 
-Run `bosh vms`.
+Example:
 
-Try uploading software to your MicroBOSH.
-A minimal ["dummy release"](https://github.com/pivotal-cf-experimental/dummy-boshrelease) can be useful here.
+<pre class='terminal'>
+$ bosh micro deploy stemcell/bosh-stemcell-2427-aws-xen-ubuntu.tgz
+</pre>
 
-### <a id="bats"></a> Run the BOSH Acceptance Tests (BATS) ###
+**Note**: An important effect of the `bosh micro deploy` command is to create
+the `bosh-deployment.yml` file.
+This file functions like a small database that MicroBOSH uses when bootstrapping
+itself.
 
-BATS requires advanced system administration skills.
+1. Use `bosh target IP-ADDRESS` to log into your new MicroBOSH server.
+The default username and password are `admin` and `admin`.
+
+Example:
+
+<pre class='terminal'>
+$ bosh target 54.86.66.111
+Target set to 'microbosh'
+Your username: admin
+Enter password: *****
+Logged in as 'admin'
+</pre>
+
+1. Run `bosh status` to check the state of your MicroBOSH deployment.
+
+<pre class='terminal'>
+$ bosh status
+Config
+              /Users/pivotal/.bosh_config
+
+Director
+  Name        micro-bosh
+  URL         https://54.85.89.30:25555
+  Version     1.2427.0 (release:921db96c bosh:921db96c)
+  User        admin
+  UUID        44e69f8b-9091-405c-a2c2-d29bebb1ce8a
+  CPI         aws
+  dns         enabled (domain_name: microbosh)
+  compiled_package_cache     disabled
+  snapshots   disabled
+
+Deployment
+  not set
+</pre>
+
+## <a id="deploy-microbosh"></a>Basic Troubleshooting ##
+
+If the deployment fails, run `bosh micro delete`, then deploy again.
+
+If you see an error message that refers to your credentials, check the accuracy
+of the credentials in the [deployment manifest](#create-manifest).
+
+If you see other error messages:
+
+* Check your `micro_bosh.yml` for errors.
+* Review your IaaS configuration.
