--- a/deploy-microbosh.html.md.erb
+++ b/deploy-microbosh.html.md.erb
@@ -2,13 +2,6 @@
 title: Deploying MicroBOSH
 ---
 
-This topic presents an overview of the procedure used to deploy MicroBOSH on an
-IaaS. If you are using AWS, OpenStack, or vSphere, refer instead to these specific topics:
-
-* [Deploying MicroBOSH to AWS](./deploy-microbosh-to-aws.html)
-* [Deploying MicroBOSH to OpenStack](/deploying/openstack/deploying_microbosh.html)
-* [Deploying MicroBOSH to vSphere](/deploying/vsphere/deploying_micro_bosh.html)
-
 MicroBOSH is a version of BOSH that runs on a single VM.
 
 BOSH that runs on multiple VMs, or multi-VM BOSH, deploys and manages
@@ -18,16 +11,14 @@ The only supported way to deploy multi-VM BOSH is to use MicroBOSH.
 You can use MicroBOSH to deploy multi-VM BOSH, Cloud Foundry, or other
 distributed software packages on an IaaS.
 
-The IaaS you use determines many details of how you deploy MicroBOSH.
-This topic explains the general procedure used with any IaaS.
+The IaaS you use determines many details of how you deploy MicroBOSH. 
+This topic presents an overview of the procedure used to deploy MicroBOSH on any
+IaaS. 
+If you are using AWS, OpenStack, or vSphere, refer instead to these specific topics:
 
-To deploy MicroBOSH you need to:
-
-1. Configure your local environment
-2. Prepare your IaaS
-3. Create a deployment manifest
-4. Download a stemcell
-5. Deploy MicroBOSH
+* [Deploying MicroBOSH to AWS](./deploy-microbosh-to-aws.html)
+* [Deploying MicroBOSH to OpenStack](/deploying/openstack/deploying_microbosh.html)
+* [Deploying MicroBOSH to vSphere](/deploying/vsphere/deploying_micro_bosh.html)
 
 ## <a id="configure-local"></a>Step 1: Configure Local Environment ##
 
