fix broken anchor link

--- a/jobs.html.md.erb
+++ b/jobs.html.md.erb
@@ -68,7 +68,7 @@ BOSH jobs consist of three parts: specifications, templates, and monitoring.
 A job specification, or **spec**, is a YAML document that lists:
 
 * Required [packages](./reference/packages.html): A package contains source code and a script. The script describes how to compile the source code and install the resultant binary. Optionally, packages can contain the names of other packages this package depends on.
-* Job templates: The names and file paths to [job templates](#template) the job uses.
+* Job templates: The names and file paths to [job templates](#templates) the job uses.
 * Job properties: BOSH uses job properties when creating an instance of a job. Typical job properties include account names, passwords, shared secrets, hostnames, IP addresses, port numbers, and descriptions.
 
 ### <a id="templates"></a>Templates ###
