change first 'var/vcap/blobs' to 'var/vcap/jobs'

--- a/create-release.html.md.erb
+++ b/create-release.html.md.erb
@@ -55,7 +55,7 @@ $ tree .
 When deploying your release, BOSH places compiled code and other resources
 in the `/var/vcap/` directory tree, which BOSH creates on the job VMs.
 The four directories you just created, `jobs`, `packages`, `src`, and `blobs`,
-appear on job VMs as `/var/vcap/blobs`, `/var/vcap/packages`, `/var/vcap/src`,
+appear on job VMs as `/var/vcap/jobs`, `/var/vcap/packages`, `/var/vcap/src`,
 and `/var/vcap/blobs`, respectively.
 
 ### <a id="source"></a> Populate the src directory ###
