Removing broken link

--- a/create-micro-manifest.html.md.erb
+++ b/create-micro-manifest.html.md.erb
@@ -283,7 +283,7 @@ apply_spec:
 
 #### <a id="openstack-nw"></a>OpenStack networking options ####
 
-If you are using [nova-network](), the network block takes the following form:
+If you are using nova-network, the network block takes the following form:
 
 ~~~yaml
 network:
