--- a/deploy-microbosh-to-aws.html.md.erb
+++ b/deploy-microbosh-to-aws.html.md.erb
@@ -134,6 +134,8 @@ Click **Yes, Allocate**.
     * **Description:** BOSH Security Group
     * **VPC:** Select the ‘microbosh’ VPC created in [Create a Virtual Private Cloud](#create-vpc).
 
+    The **Group Name** is used to define the default security groups in [Step 2: Create the Deployment Manifest](#create-manifest).
+
         <%= image_tag("images/micro-aws/create-security.png") %>
 
 1. Click **Yes, Create**.
@@ -180,6 +182,9 @@ from AWS:
 * MICROBOSH-SUBNET-ID
 * ACCESS-KEY-ID
 * SECRET-ACCESS-KEY
+
+Use the **Group Name** of the VPC Security Group, not the security group ID, as 
+the value for the `default_security_group`. 
 
 The MicroBOSH deployment manifest template:
 
