--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -13,6 +13,10 @@ BOSH orchestrates initial deployments and ongoing updates that are:
 BOSH works on multiple IaaS offerings including AWS, Open Stack, and vSphere,
 freeing operators from concerns about differences between environments.
 
+## <a id="new"></a>What's New in BOSH ##
+
+* [BOSH Errands](./bosh-errands.html)
+
 ## <a id="foundations"></a> BOSH Foundations ##
 
 * [BOSH Terminology](./terminology.html)
