Fix ids in design doc

--- a/design.html.md.erb
+++ b/design.html.md.erb
@@ -23,12 +23,12 @@ BOSH versions all jobs, packages, and releases independently.
 Because BOSH automatically versions releases and everything they contain in a
 consistent way, the state of your deployment is known throughout its lifecycle.
 
-## <a id="predictable"></a>BOSH Deployments are Repeatable ##
+## <a id="repeatable"></a>BOSH Deployments are Repeatable ##
 
 Every time you repeat a deployment, the result is exactly the same deployed
 system.
 
-## <a id="predictable"></a>BOSH Deployments are Self-Healing ##
+## <a id="self-healing"></a>BOSH Deployments are Self-Healing ##
 
 BOSH monitors the health of processes running on the virtual machines it deploys
 and compares the results with the ideal state of the system as described in the
