add job-log topic to index.html

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -43,3 +43,4 @@ Run `bosh help --all` to see all available BOSH commands.
 * [Creating a MicroBOSH Deployment Manifest](./create-micro-manifest.html)
 * [Understanding the BOSH Deployment Manifest](./deployment-manifest.html)
 * [Sample BOSH Deployment Manifest](./sample-manifest.html)
+* [How to Locate and Watch Logs on Job VMs](./job-logs.html)
