--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -13,15 +13,14 @@ BOSH orchestrates initial deployments and ongoing updates that are:
 BOSH works on multiple IaaS offerings including AWS, Open Stack, and vSphere,
 freeing operators from concerns about differences between environments.
 
-## <a id="new"></a>What's New in BOSH ##
-
-* [BOSH Errands](./bosh-errands.html)
+### [What's New in BOSH](./bosh-new.html) ###
 
 ## <a id="foundations"></a> BOSH Foundations ##
 
 * [BOSH Terminology](./terminology.html)
 * [Understanding BOSH](./understanding-bosh.html)
 * [BOSH Components](./bosh-components.html)
+* [BOSH Errands](./bosh-errands.html)
 * [Jobs and Errands](./jobs.html)
 * [Basic BOSH Workflow](./workflow.html)
 * [BOSH Design Principles](./design.html)
